--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,14 @@ spring.datasource.druid.testOnReturn=false
 #mybatis≈‰÷√
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/*.xml
+
+#redis
+spring.redis.database=0
+spring.redis.host=192.168.10.134
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-wait=-1
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.min-idle=0
+spring.redis.timeout=5000
