--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8002
 # ˝æ›ø‚≈‰÷√
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://192.168.10.134:3307/poandse?serverTimezone=GMT%2B8&useSSL=false
@@ -30,3 +31,9 @@ spring.redis.lettuce.pool.max-wait=-1
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=0
 spring.redis.timeout=5000
+
+#eureka
+spring.application.name=poandse
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8000/eureka
